[gd_scene load_steps=12 format=3 uid="uid://bkuuewmvl1iiu"]

[ext_resource type="Script" path="res://games/alchemical_sort/scripts/Game.gd" id="1"]
[ext_resource type="FontFile" uid="uid://lfx73a34jolm" path="res://assets/font/vetka.ttf" id="2_font"]
[ext_resource type="Texture2D" uid="uid://dq3mi4tdibma6" path="res://games/alchemical_sort/assets/alchemy_bg3.png" id="3_0hd8l"]
[ext_resource type="Texture2D" uid="uid://cv6wgmx8qr3bg" path="res://games/alchemical_sort/assets/1772305215676-019ca59e-ee62-7b80-a838-0e85021bc714.png" id="4_26njo"]
[ext_resource type="Texture2D" uid="uid://cv5bovdrqewfc" path="res://games/alchemical_sort/assets/colors_anim.png" id="5_gkxpu"]

[sub_resource type="AtlasTexture" id="AtlasTexture_dgmch"]
atlas = ExtResource("5_gkxpu")
region = Rect2(0, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2vfkn"]
atlas = ExtResource("5_gkxpu")
region = Rect2(64, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jqaj0"]
atlas = ExtResource("5_gkxpu")
region = Rect2(128, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_61ycg"]
atlas = ExtResource("5_gkxpu")
region = Rect2(192, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_54tnb"]
atlas = ExtResource("5_gkxpu")
region = Rect2(256, 0, 64, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_s7u5f"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dgmch")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2vfkn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jqaj0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_61ycg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_54tnb")
}],
"loop": true,
"name": &"liquid_anim",
"speed": 5.0
}]

[node name="Game" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Bg" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.05, 0.07, 0.1, 1)

[node name="MoveLabel" type="Label" parent="."]
z_index = 10
layout_mode = 0
offset_left = 20.0
offset_top = 17.0
offset_right = 145.0
offset_bottom = 54.0
theme_override_colors/font_color = Color(0.9, 0.85, 0.6, 1)
theme_override_colors/font_outline_color = Color(0.1, 0.05, 0.02, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 30
text = "Moves: 0"

[node name="BestLabel" type="Label" parent="."]
z_index = 10
layout_mode = 0
offset_left = 20.0
offset_top = 65.0
offset_right = 145.0
offset_bottom = 110.0
theme_override_colors/font_color = Color(0.901961, 0.85098, 0.6, 1)
theme_override_colors/font_outline_color = Color(0.05, 0.05, 0.08, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 30
text = "Best: â€“"

[node name="UndoButton" type="Button" parent="."]
modulate = Color(1, 1, 1, 0.35)
z_index = 10
layout_mode = 0
offset_left = 405.0
offset_top = 20.0
offset_right = 487.0
offset_bottom = 62.0
theme_override_colors/font_color = Color(0.6, 0.6, 0.65, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 28
text = "UNDO"
flat = true

[node name="ReshuffleLabel" type="Label" parent="."]
visible = false
z_index = 25
layout_mode = 0
offset_top = 710.0
offset_right = 540.0
offset_bottom = 758.0
theme_override_colors/font_color = Color(0.7, 0.75, 0.82, 1)
theme_override_colors/font_outline_color = Color(0.04, 0.05, 0.08, 1)
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 24
text = "No valid moves left."
horizontal_alignment = 1
vertical_alignment = 1

[node name="ReshuffleButton" type="Button" parent="."]
visible = false
z_index = 25
layout_mode = 0
offset_left = 140.0
offset_top = 762.0
offset_right = 400.0
offset_bottom = 820.0
theme_override_colors/font_color = Color(0.9, 0.85, 0.6, 1)
theme_override_colors/font_outline_color = Color(0.1, 0.05, 0.02, 1)
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 28
text = "RESHUFFLE"
flat = true

[node name="BackButton" type="Button" parent="."]
z_index = 10
layout_mode = 0
offset_left = 58.0
offset_top = 900.0
offset_right = 131.0
offset_bottom = 937.0
theme_override_colors/font_color = Color(0.901961, 0.85098, 0.6, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 24
text = "< BACK"
flat = true

[node name="WinPanel" type="Control" parent="."]
visible = false
z_index = 30
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Overlay" type="ColorRect" parent="WinPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.04, 0.05, 0.09, 0.88)

[node name="WinLabel" type="Label" parent="WinPanel"]
layout_mode = 0
offset_top = 340.0
offset_right = 540.0
offset_bottom = 440.0
theme_override_colors/font_color = Color(0.9, 0.85, 0.6, 1)
theme_override_colors/font_outline_color = Color(0.1, 0.05, 0.02, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 58
text = "Solved!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="WinMovesLabel" type="Label" parent="WinPanel"]
layout_mode = 0
offset_top = 452.0
offset_right = 540.0
offset_bottom = 504.0
theme_override_colors/font_color = Color(0.7, 0.75, 0.82, 1)
theme_override_colors/font_outline_color = Color(0.05, 0.05, 0.08, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 26
text = "in 0 moves"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NewGameButton" type="Button" parent="WinPanel"]
layout_mode = 0
offset_left = 155.0
offset_top = 534.0
offset_right = 385.0
offset_bottom = 592.0
theme_override_colors/font_color = Color(0.9, 0.85, 0.6, 1)
theme_override_colors/font_outline_color = Color(0.1, 0.05, 0.02, 1)
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 30
text = "NEW GAME"
flat = true

[node name="MysteryLabel" type="Label" parent="."]
visible = false
z_index = 50
layout_mode = 0
offset_top = 420.0
offset_right = 540.0
offset_bottom = 520.0
pivot_offset = Vector2(270, 50)
theme_override_colors/font_color = Color(1, 0.85, 0.25, 1)
theme_override_colors/font_outline_color = Color(0.1, 0.05, 0.02, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 52
text = "Mystery..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="AlchemyBg3" type="Sprite2D" parent="."]
position = Vector2(270, 481.329)
scale = Vector2(0.697917, 0.697917)
texture = ExtResource("3_0hd8l")

[node name="1772305215676-019Ca59e-ee62-7b80-a838-0e85021Bc714" type="Sprite2D" parent="."]
position = Vector2(270.5, 479.104)
scale = Vector2(0.699219, 0.699219)
texture = ExtResource("4_26njo")

[node name="liquid_anim" type="AnimatedSprite2D" parent="."]
visible = false
z_index = 9
position = Vector2(-132, 255)
sprite_frames = SubResource("SpriteFrames_s7u5f")
animation = &"liquid_anim"

[connection signal="pressed" from="UndoButton" to="." method="_on_undo_pressed"]
[connection signal="pressed" from="ReshuffleButton" to="." method="_on_reshuffle_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_pressed"]
[connection signal="pressed" from="WinPanel/NewGameButton" to="." method="_on_new_game_pressed"]
